--- a/src/plugins/koops_event.conf
+++ b/src/plugins/koops_event.conf
@@ -36,6 +36,12 @@ EVENT=report_Bugzilla analyzer=Kerneloops
 # Send micro report
 EVENT=report_uReport analyzer=Kerneloops
         /usr/libexec/abrt-action-ureport
+        if [ $? -ne 0 -a $? -ne 69 -a $? -ne 70 ]; then
+            echo "Switching to: https://bug-report.itos.redhat.com/"
+            uReport_URL="https://bug-report.itos.redhat.com/" \
+            uReport_SSLVerify="no" \
+            /usr/libexec/abrt-action-ureport
+        fi
 
 # Update ABRT database after successful report to bugzilla
 EVENT=post_report analyzer=Kerneloops
