--- a/src/plugins/vmcore_event.conf
+++ b/src/plugins/vmcore_event.conf
@@ -58,6 +58,12 @@ EVENT=post_report analyzer=vmcore
 # Send micro report
 EVENT=report_uReport analyzer=vmcore
         /usr/libexec/abrt-action-ureport
+        if [ $? -ne 0 -a $? -ne 69 -a $? -ne 70 ]; then
+            echo "Switching to: https://bug-report.itos.redhat.com/"
+            uReport_URL="https://bug-report.itos.redhat.com/" \
+            uReport_SSLVerify="no" \
+            /usr/libexec/abrt-action-ureport
+        fi
 
 EVENT=report-gui analyzer=vmcore
     report-gtk -- "$DUMP_DIR"
