--- a/src/plugins/analyze_RetraceServer.xml.in
+++ b/src/plugins/analyze_RetraceServer.xml.in
@@ -12,12 +12,13 @@
     <options>
         <option type="text" name="RETRACE_SERVER_URL">
            <_label>Retrace server URL</_label>
-           <default-value>localhost</default-value>
+           <default-value>abrt.brq.redhat.com</default-value>
            <allow-empty>no</allow-empty>
            <_description>Address of the retrace server</_description>
        </option>
        <option type="text" name="RETRACE_SERVER_INSECURE">
            <_label>Insecure</_label>
+           <default-value>insecure</default-value>
            <allow-empty>yes</allow-empty>
            <_description>Whether or not to use insecure connection</_description>
            <_note-html>Write "insecure" to allow insecure connection &lt;a href="https://fedorahosted.org/abrt/wiki/AbrtRetraceServerInsecureConnection" &gt;(warning)&lt;/a&gt;</_note-html>
