--- a/src/plugins/ccpp_event.conf
+++ b/src/plugins/ccpp_event.conf
@@ -92,6 +92,12 @@ EVENT=report_Bugzilla analyzer=CCpp duphash!=
 # Send micro report
 EVENT=report_uReport analyzer=CCpp
         /usr/libexec/abrt-action-ureport
+        if [ $? -ne 0 -a $? -ne 69 -a $? -ne 70 ]; then
+            echo "Switching to: https://bug-report.itos.redhat.com/"
+            uReport_URL="https://bug-report.itos.redhat.com/" \
+            uReport_SSLVerify="no" \
+            /usr/libexec/abrt-action-ureport
+        fi
 
 # update ABRT database after successful report to bugzilla
 EVENT=post_report analyzer=CCpp
