--- a/src/hooks/CCpp.conf
+++ b/src/hooks/CCpp.conf
@@ -16,7 +16,7 @@ SaveBinaryImage = no
 # When this option is set to 'yes', core backtrace is generated
 # from the memory image of the crashing process. Only the crash
 # thread is present in the backtrace.
-CreateCoreBacktrace = no
+CreateCoreBacktrace = yes
 
 # Save full coredump? If set to 'no', coredump won't be saved
 # and you won't be able to report the crash to Bugzilla. Only
